[gd_scene load_steps=5 format=3 uid="uid://diugumuikudpq"]

[ext_resource type="Script" path="res://UIScenes/LVLSelect/lvl_select.gd" id="1_vfw1f"]
[ext_resource type="Texture2D" uid="uid://em1w7a78ink0" path="res://UI Assets/back_idle.png" id="2_ukmqe"]
[ext_resource type="Texture2D" uid="uid://wk8fhgp8qjwg" path="res://UI Assets/back_hover.png" id="3_rqggu"]
[ext_resource type="Texture2D" uid="uid://dgejmrw8ia076" path="res://UI Assets/level_select.png" id="4_g2cgd"]

[node name="lvlSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vfw1f")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.729412, 0.764706, 0.898039, 1)

[node name="Back" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.039
anchor_top = 0.79
anchor_right = 0.106
anchor_bottom = 0.909
offset_left = 0.0719991
offset_top = 48.08
offset_right = 2.88799
offset_bottom = 25.9679
grow_vertical = 0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 0
texture_normal = ExtResource("2_ukmqe")
texture_pressed = ExtResource("3_rqggu")
texture_hover = ExtResource("3_rqggu")
texture_focused = ExtResource("3_rqggu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.5
offset_top = -229.0
offset_right = 259.5
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_g2cgd")

[node name="lvl1" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 416.0
offset_top = 304.0
offset_right = 516.0
offset_bottom = 404.0
text = "1"

[node name="lvl2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 528.0
offset_top = 304.0
offset_right = 628.0
offset_bottom = 404.0
text = "2"

[node name="lvl3" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 640.0
offset_top = 304.0
offset_right = 740.0
offset_bottom = 404.0
text = "3"

[node name="lvl4" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 416.0
offset_top = 416.0
offset_right = 516.0
offset_bottom = 516.0
text = "4"

[node name="lvl5" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 528.0
offset_top = 416.0
offset_right = 628.0
offset_bottom = 516.0
text = "5"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="lvl5" to="." method="_on_lvl_5_pressed"]
